# --------------------------------------------------------------
# Build system
# --------------------------------------------------------------
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# --------------------------------------------------------------
# Project metadata
# --------------------------------------------------------------
[project]
name = "LLMGeocoder"
version = "0.1.0"
description = "Hybrid LangChain-based RAG pipeline for retrieving geocoordinates of publicly available genomes"

authors = [
    { name = "Gianna L. Marschmann", email = "glmarschmann@lbl.gov" },
]

license = { text = "MIT" }
requires-python = ">=3.9"

# --------------------------------------------------------------
# Runtime dependencies
# --------------------------------------------------------------
dependencies = [
    "langchain==0.3.26",
    "langchain-chroma==0.2.4",
    "langchain-huggingface",
    "sentence-transformers==5.0.0",
    "torch==2.7.1",
    "transformers==4.53.2",
    "biopython==1.85",
    "chromadb==1.0.15",
    "geopy==2.4.1",
    "spacy==3.8.7",
    "pandas==2.3.1",
    "numpy==2.3.2",               
    "python-dotenv==1.0.1",         # helpful for .env files
    "pydantic==2.11.7",
]

# --------------------------------------------------------------
#  Development dependencies
# --------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "pytest==8.2.2",               # testing framework
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# --------------------------------------------------------------
# Setuptools configuration – tells setuptools where to find packages
# --------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]   # look for packages under the src/ directory